--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Collector</title>
+    <title>URL Collector & Sharer</title>
     <link rel="stylesheet" href="popup.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <div class="app-container">
         <header>
             <div class="header-top">
-                <h1>URL Collector</h1>
+                <h1>URL Collector & Sharer</h1>
                 <span id="url-count" class="badge">0</span>
             </div>
 
